[package]
name = "prometheus-speedtest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { version = "0.13.3", features = ["toml"] }
serde = { version = "1.0.164", features = ["derive"] }
tokio = { version = "1.28.2", features = ["full"] }
structured-logger = "1.0.1"
log = "0.4.19"
futures = "0.3.28"
axum = "0.6.18"